# res_rename

./: Cargo.toml  readme.md
src/: main.rs
